RESOLVED FIXED50979
REGRESSION (r72173): Fallback fonts’ vertical metrics aren’t accounted for even when line-height is unspecified
https://bugs.webkit.org/show_bug.cgi?id=50979
Summary REGRESSION (r72173): Fallback fonts’ vertical metrics aren’t accounted for ev...
mitz
Reported 2010-12-13 14:50:42 PST
Patch forthcoming.
Attachments
Reinstate code that sets affectsAscent and affectsDescent (pixel results elided) (1.41 MB, patch)
2010-12-13 16:25 PST, mitz
simon.fraser: review+
mitz
Comment 1 2010-12-13 14:51:03 PST
mitz
Comment 2 2010-12-13 16:25:34 PST
Created attachment 76463 [details] Reinstate code that sets affectsAscent and affectsDescent (pixel results elided)
mitz
Comment 3 2010-12-13 18:15:27 PST
Note You need to log in before you can comment on or make changes to this bug.