<rdar://problem/8763696> REGRESSION (r72173): Fallback fonts’ vertical metrics aren’t accounted for even when line-height is unspecified https://bugs.webkit.org/show_bug.cgi?id=50979

Reviewed by Simon Fraser.

WebCore:

Many test results updated.

* rendering/InlineFlowBox.cpp: Reinstated the code that updates affectsAscent and
affectsDescent in the used-fonts code path. Renamed variables for clarity. Added
a check whether usedFonts is empty (which it might be if there is glyph overflow
but no fallback) as an optimization.

LayoutTests:

* editing/selection/extend-selection-bidi-expected.txt:
* platform/mac/css2.1/t0805-c5518-brdr-t-01-e-expected.checksum:
* platform/mac/css2.1/t0805-c5518-brdr-t-01-e-expected.png:
* platform/mac/css2.1/t0805-c5518-brdr-t-01-e-expected.txt:
* platform/mac/css2.1/t0805-c5519-brdr-r-00-a-expected.checksum:
* platform/mac/css2.1/t0805-c5519-brdr-r-00-a-expected.png:
* platform/mac/css2.1/t0805-c5519-brdr-r-00-a-expected.txt:
* platform/mac/css2.1/t0805-c5520-brdr-b-01-e-expected.checksum:
* platform/mac/css2.1/t0805-c5520-brdr-b-01-e-expected.png:
* platform/mac/css2.1/t0805-c5520-brdr-b-01-e-expected.txt:
* platform/mac/css2.1/t0805-c5521-brdr-l-00-a-expected.checksum:
* platform/mac/css2.1/t0805-c5521-brdr-l-00-a-expected.png:
* platform/mac/css2.1/t0805-c5521-brdr-l-00-a-expected.txt:
* platform/mac/css2.1/t0805-c5521-brdr-l-01-e-expected.checksum:
* platform/mac/css2.1/t0805-c5521-brdr-l-01-e-expected.png:
* platform/mac/css2.1/t0805-c5521-brdr-l-01-e-expected.txt:
* platform/mac/css2.1/t0805-c5521-ibrdr-l-00-a-expected.checksum:
* platform/mac/css2.1/t0805-c5521-ibrdr-l-00-a-expected.png:
* platform/mac/css2.1/t0805-c5521-ibrdr-l-00-a-expected.txt:
* platform/mac/css2.1/t0905-c414-flt-02-c-expected.checksum:
* platform/mac/css2.1/t0905-c414-flt-02-c-expected.png:
* platform/mac/css2.1/t0905-c414-flt-02-c-expected.txt:
* platform/mac/css2.1/t0905-c414-flt-03-c-expected.checksum:
* platform/mac/css2.1/t0905-c414-flt-03-c-expected.png:
* platform/mac/css2.1/t0905-c414-flt-03-c-expected.txt:
* platform/mac/css2.1/t0905-c414-flt-04-c-expected.checksum:
* platform/mac/css2.1/t0905-c414-flt-04-c-expected.png:
* platform/mac/css2.1/t0905-c414-flt-04-c-expected.txt:
* platform/mac/css2.1/t0905-c414-flt-fit-01-d-g-expected.checksum:
* platform/mac/css2.1/t0905-c414-flt-fit-01-d-g-expected.png:
* platform/mac/css2.1/t0905-c414-flt-fit-01-d-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltblck-01-d-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltblck-01-d-expected.png:
* platform/mac/css2.1/t0905-c5525-fltblck-01-d-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.png:
* platform/mac/css2.1/t0905-c5525-fltcont-00-d-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-flthw-00-c-g-expected.checksum:
* platform/mac/css2.1/t0905-c5525-flthw-00-c-g-expected.png:
* platform/mac/css2.1/t0905-c5525-flthw-00-c-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.png:
* platform/mac/css2.1/t0905-c5525-fltwidth-00-c-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltwidth-02-c-g-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltwidth-02-c-g-expected.png:
* platform/mac/css2.1/t0905-c5525-fltwidth-02-c-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltwidth-03-c-g-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltwidth-03-c-g-expected.png:
* platform/mac/css2.1/t0905-c5525-fltwidth-03-c-g-expected.txt:
* platform/mac/css2.1/t0905-c5525-fltwrap-00-b-expected.checksum:
* platform/mac/css2.1/t0905-c5525-fltwrap-00-b-expected.png:
* platform/mac/css2.1/t0905-c5525-fltwrap-00-b-expected.txt:
* platform/mac/css2.1/t0905-c5526-flthw-00-c-g-expected.checksum:
* platform/mac/css2.1/t0905-c5526-flthw-00-c-g-expected.png:
* platform/mac/css2.1/t0905-c5526-flthw-00-c-g-expected.txt:
* platform/mac/css2.1/t090501-c414-flt-01-b-expected.checksum:
* platform/mac/css2.1/t090501-c414-flt-01-b-expected.png:
* platform/mac/css2.1/t090501-c414-flt-01-b-expected.txt:
* platform/mac/css2.1/t090501-c414-flt-03-b-g-expected.checksum:
* platform/mac/css2.1/t090501-c414-flt-03-b-g-expected.png:
* platform/mac/css2.1/t090501-c414-flt-03-b-g-expected.txt:
* platform/mac/css2.1/t090501-c5525-flt-l-00-b-g-expected.checksum:
* platform/mac/css2.1/t090501-c5525-flt-l-00-b-g-expected.png:
* platform/mac/css2.1/t090501-c5525-flt-l-00-b-g-expected.txt:
* platform/mac/css2.1/t090501-c5525-flt-r-00-b-g-expected.checksum:
* platform/mac/css2.1/t090501-c5525-flt-r-00-b-g-expected.png:
* platform/mac/css2.1/t090501-c5525-flt-r-00-b-g-expected.txt:
* platform/mac/css2.1/t100304-c43-rpl-bbx-01-d-g-expected.checksum:
* platform/mac/css2.1/t100304-c43-rpl-bbx-01-d-g-expected.png:
* platform/mac/css2.1/t100304-c43-rpl-bbx-01-d-g-expected.txt:
* platform/mac/css2.1/t1202-counter-03-b-expected.checksum:
* platform/mac/css2.1/t1202-counter-03-b-expected.png:
* platform/mac/css2.1/t1202-counter-03-b-expected.txt:
* platform/mac/css2.1/t1202-counter-04-b-expected.checksum:
* platform/mac/css2.1/t1202-counter-04-b-expected.png:
* platform/mac/css2.1/t1202-counter-04-b-expected.txt:
* platform/mac/css2.1/t1202-counter-09-b-expected.checksum:
* platform/mac/css2.1/t1202-counter-09-b-expected.png:
* platform/mac/css2.1/t1202-counter-09-b-expected.txt:
* platform/mac/css2.1/t1202-counters-03-b-expected.checksum:
* platform/mac/css2.1/t1202-counters-03-b-expected.png:
* platform/mac/css2.1/t1202-counters-03-b-expected.txt:
* platform/mac/css2.1/t1202-counters-04-b-expected.checksum:
* platform/mac/css2.1/t1202-counters-04-b-expected.png:
* platform/mac/css2.1/t1202-counters-04-b-expected.txt:
* platform/mac/css2.1/t1202-counters-09-b-expected.checksum:
* platform/mac/css2.1/t1202-counters-09-b-expected.png:
* platform/mac/css2.1/t1202-counters-09-b-expected.txt:
* platform/mac/editing/deleting/5144139-2-expected.checksum:
* platform/mac/editing/deleting/5144139-2-expected.png:
* platform/mac/editing/deleting/5144139-2-expected.txt:
* platform/mac/editing/selection/caret-rtl-2-expected.checksum:
* platform/mac/editing/selection/caret-rtl-2-expected.png:
* platform/mac/editing/selection/caret-rtl-2-expected.txt:
* platform/mac/editing/selection/caret-rtl-2-left-expected.checksum:
* platform/mac/editing/selection/caret-rtl-2-left-expected.png:
* platform/mac/editing/selection/caret-rtl-2-left-expected.txt:
* platform/mac/editing/selection/caret-rtl-expected.checksum:
* platform/mac/editing/selection/caret-rtl-expected.png:
* platform/mac/editing/selection/caret-rtl-expected.txt:
* platform/mac/editing/selection/caret-rtl-right-expected.checksum:
* platform/mac/editing/selection/caret-rtl-right-expected.png:
* platform/mac/editing/selection/caret-rtl-right-expected.txt:
* platform/mac/editing/selection/extend-selection-bidi-expected.checksum:
* platform/mac/editing/selection/extend-selection-bidi-expected.png:
* platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.checksum:
* platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.png:
* platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.txt:
* platform/mac/fast/css/beforeSelectorOnCodeElement-expected.checksum:
* platform/mac/fast/css/beforeSelectorOnCodeElement-expected.png:
* platform/mac/fast/css/beforeSelectorOnCodeElement-expected.txt:
* platform/mac/fast/css/font-face-opentype-expected.checksum:
* platform/mac/fast/css/font-face-opentype-expected.png:
* platform/mac/fast/css/font-face-opentype-expected.txt:
* platform/mac/fast/css/rtl-ordering-expected.checksum:
* platform/mac/fast/css/rtl-ordering-expected.png:
* platform/mac/fast/css/rtl-ordering-expected.txt:
* platform/mac/fast/css/text-overflow-ellipsis-bidi-expected.checksum:
* platform/mac/fast/css/text-overflow-ellipsis-bidi-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-bidi-expected.txt:
* platform/mac/fast/css/text-overflow-ellipsis-expected.checksum:
* platform/mac/fast/css/text-overflow-ellipsis-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-expected.txt:
* platform/mac/fast/css/text-overflow-ellipsis-strict-expected.checksum:
* platform/mac/fast/css/text-overflow-ellipsis-strict-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-strict-expected.txt:
* platform/mac/fast/css/text-security-expected.checksum:
* platform/mac/fast/css/text-security-expected.png:
* platform/mac/fast/css/text-security-expected.txt:
* platform/mac/fast/encoding/denormalised-voiced-japanese-chars-expected.checksum:
* platform/mac/fast/encoding/denormalised-voiced-japanese-chars-expected.png:
* platform/mac/fast/encoding/denormalised-voiced-japanese-chars-expected.txt:
* platform/mac/fast/encoding/invalid-UTF-8-expected.checksum:
* platform/mac/fast/encoding/invalid-UTF-8-expected.png:
* platform/mac/fast/encoding/invalid-UTF-8-expected.txt:
* platform/mac/fast/events/updateLayoutForHitTest-expected.checksum:
* platform/mac/fast/events/updateLayoutForHitTest-expected.png:
* platform/mac/fast/events/updateLayoutForHitTest-expected.txt:
* platform/mac/fast/forms/select-visual-hebrew-expected.checksum:
* platform/mac/fast/forms/select-visual-hebrew-expected.png:
* platform/mac/fast/forms/select-visual-hebrew-expected.txt:
* platform/mac/fast/forms/select-writing-direction-natural-expected.checksum:
* platform/mac/fast/forms/select-writing-direction-natural-expected.png:
* platform/mac/fast/forms/select-writing-direction-natural-expected.txt:
* platform/mac/fast/forms/visual-hebrew-text-field-expected.checksum:
* platform/mac/fast/forms/visual-hebrew-text-field-expected.png:
* platform/mac/fast/forms/visual-hebrew-text-field-expected.txt:
* platform/mac/fast/ruby/nested-ruby-expected.txt:
* platform/mac/fast/text/atsui-multiple-renderers-expected.checksum:
* platform/mac/fast/text/atsui-multiple-renderers-expected.png:
* platform/mac/fast/text/atsui-multiple-renderers-expected.txt:
* platform/mac/fast/text/backslash-to-yen-sign-euc-expected.checksum:
* platform/mac/fast/text/backslash-to-yen-sign-euc-expected.png:
* platform/mac/fast/text/backslash-to-yen-sign-euc-expected.txt:
* platform/mac/fast/text/backslash-to-yen-sign-expected.checksum:
* platform/mac/fast/text/backslash-to-yen-sign-expected.png:
* platform/mac/fast/text/backslash-to-yen-sign-expected.txt:
* platform/mac/fast/text/bidi-embedding-pop-and-push-same-expected.checksum:
* platform/mac/fast/text/bidi-embedding-pop-and-push-same-expected.png:
* platform/mac/fast/text/bidi-embedding-pop-and-push-same-expected.txt:
* platform/mac/fast/text/capitalize-boundaries-expected.checksum:
* platform/mac/fast/text/capitalize-boundaries-expected.png:
* platform/mac/fast/text/capitalize-boundaries-expected.txt:
* platform/mac/fast/text/cg-fallback-bolding-expected.checksum:
* platform/mac/fast/text/cg-fallback-bolding-expected.png:
* platform/mac/fast/text/cg-fallback-bolding-expected.txt:
* platform/mac/fast/text/complex-text-opacity-expected.checksum:
* platform/mac/fast/text/complex-text-opacity-expected.png:
* platform/mac/fast/text/complex-text-opacity-expected.txt:
* platform/mac/fast/text/in-rendered-text-rtl-expected.checksum:
* platform/mac/fast/text/in-rendered-text-rtl-expected.png:
* platform/mac/fast/text/in-rendered-text-rtl-expected.txt:
* platform/mac/fast/text/international/001-expected.checksum:
* platform/mac/fast/text/international/001-expected.png:
* platform/mac/fast/text/international/001-expected.txt:
* platform/mac/fast/text/international/002-expected.checksum:
* platform/mac/fast/text/international/002-expected.png:
* platform/mac/fast/text/international/002-expected.txt:
* platform/mac/fast/text/international/003-expected.checksum:
* platform/mac/fast/text/international/003-expected.png:
* platform/mac/fast/text/international/003-expected.txt:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.checksum:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.png:
* platform/mac/fast/text/international/bidi-AN-after-L-expected.txt:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.checksum:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.png:
* platform/mac/fast/text/international/bidi-AN-after-empty-run-expected.txt:
* platform/mac/fast/text/international/bidi-CS-after-AN-expected.checksum:
* platform/mac/fast/text/international/bidi-CS-after-AN-expected.png:
* platform/mac/fast/text/international/bidi-CS-after-AN-expected.txt:
* platform/mac/fast/text/international/bidi-L2-run-reordering-expected.checksum:
* platform/mac/fast/text/international/bidi-L2-run-reordering-expected.png:
* platform/mac/fast/text/international/bidi-L2-run-reordering-expected.txt:
* platform/mac/fast/text/international/bidi-LDB-2-CSS-expected.checksum:
* platform/mac/fast/text/international/bidi-LDB-2-CSS-expected.png:
* platform/mac/fast/text/international/bidi-LDB-2-CSS-expected.txt:
* platform/mac/fast/text/international/bidi-LDB-2-HTML-expected.checksum:
* platform/mac/fast/text/international/bidi-LDB-2-HTML-expected.png:
* platform/mac/fast/text/international/bidi-LDB-2-HTML-expected.txt:
* platform/mac/fast/text/international/bidi-LDB-2-formatting-characters-expected.checksum:
* platform/mac/fast/text/international/bidi-LDB-2-formatting-characters-expected.png:
* platform/mac/fast/text/international/bidi-LDB-2-formatting-characters-expected.txt:
* platform/mac/fast/text/international/bidi-european-terminators-expected.checksum:
* platform/mac/fast/text/international/bidi-european-terminators-expected.png:
* platform/mac/fast/text/international/bidi-european-terminators-expected.txt:
* platform/mac/fast/text/international/bidi-fallback-font-weight-expected.checksum:
* platform/mac/fast/text/international/bidi-fallback-font-weight-expected.png:
* platform/mac/fast/text/international/bidi-fallback-font-weight-expected.txt:
* platform/mac/fast/text/international/bidi-ignored-for-first-child-inline-expected.checksum:
* platform/mac/fast/text/international/bidi-ignored-for-first-child-inline-expected.png:
* platform/mac/fast/text/international/bidi-ignored-for-first-child-inline-expected.txt:
* platform/mac/fast/text/international/bidi-innertext-expected.checksum:
* platform/mac/fast/text/international/bidi-innertext-expected.png:
* platform/mac/fast/text/international/bidi-innertext-expected.txt:
* platform/mac/fast/text/international/bidi-linebreak-001-expected.checksum:
* platform/mac/fast/text/international/bidi-linebreak-001-expected.png:
* platform/mac/fast/text/international/bidi-linebreak-001-expected.txt:
* platform/mac/fast/text/international/bidi-linebreak-002-expected.checksum:
* platform/mac/fast/text/international/bidi-linebreak-002-expected.png:
* platform/mac/fast/text/international/bidi-linebreak-002-expected.txt:
* platform/mac/fast/text/international/bidi-linebreak-003-expected.checksum:
* platform/mac/fast/text/international/bidi-linebreak-003-expected.png:
* platform/mac/fast/text/international/bidi-linebreak-003-expected.txt:
* platform/mac/fast/text/international/bidi-listbox-atsui-expected.checksum:
* platform/mac/fast/text/international/bidi-listbox-atsui-expected.png:
* platform/mac/fast/text/international/bidi-listbox-atsui-expected.txt:
* platform/mac/fast/text/international/bidi-listbox-expected.checksum:
* platform/mac/fast/text/international/bidi-listbox-expected.png:
* platform/mac/fast/text/international/bidi-listbox-expected.txt:
* platform/mac/fast/text/international/bidi-menulist-expected.checksum:
* platform/mac/fast/text/international/bidi-menulist-expected.png:
* platform/mac/fast/text/international/bidi-menulist-expected.txt:
* platform/mac/fast/text/international/bidi-mirror-he-ar-expected.checksum:
* platform/mac/fast/text/international/bidi-mirror-he-ar-expected.png:
* platform/mac/fast/text/international/bidi-mirror-he-ar-expected.txt:
* platform/mac/fast/text/international/bidi-neutral-directionality-paragraph-start-expected.checksum:
* platform/mac/fast/text/international/bidi-neutral-directionality-paragraph-start-expected.png:
* platform/mac/fast/text/international/bidi-neutral-directionality-paragraph-start-expected.txt:
* platform/mac/fast/text/international/bidi-neutral-run-expected.checksum:
* platform/mac/fast/text/international/bidi-neutral-run-expected.png:
* platform/mac/fast/text/international/bidi-neutral-run-expected.txt:
* platform/mac/fast/text/international/bidi-override-expected.checksum:
* platform/mac/fast/text/international/bidi-override-expected.png:
* platform/mac/fast/text/international/bidi-override-expected.txt:
* platform/mac/fast/text/international/complex-character-based-fallback-expected.checksum:
* platform/mac/fast/text/international/complex-character-based-fallback-expected.png:
* platform/mac/fast/text/international/complex-character-based-fallback-expected.txt:
* platform/mac/fast/text/international/danda-space-expected.checksum:
* platform/mac/fast/text/international/danda-space-expected.png:
* platform/mac/fast/text/international/danda-space-expected.txt:
* platform/mac/fast/text/international/hebrew-vowels-expected.checksum:
* platform/mac/fast/text/international/hebrew-vowels-expected.png:
* platform/mac/fast/text/international/hebrew-vowels-expected.txt:
* platform/mac/fast/text/international/hindi-spacing-expected.checksum:
* platform/mac/fast/text/international/hindi-spacing-expected.png:
* platform/mac/fast/text/international/hindi-spacing-expected.txt:
* platform/mac/fast/text/international/hindi-whitespace-expected.checksum:
* platform/mac/fast/text/international/hindi-whitespace-expected.png:
* platform/mac/fast/text/international/hindi-whitespace-expected.txt:
* platform/mac/fast/text/international/plane2-expected.checksum:
* platform/mac/fast/text/international/plane2-expected.png:
* platform/mac/fast/text/international/plane2-expected.txt:
* platform/mac/fast/text/international/rtl-caret-expected.checksum:
* platform/mac/fast/text/international/rtl-caret-expected.png:
* platform/mac/fast/text/international/rtl-caret-expected.txt:
* platform/mac/fast/text/international/thai-baht-space-expected.checksum:
* platform/mac/fast/text/international/thai-baht-space-expected.png:
* platform/mac/fast/text/international/thai-baht-space-expected.txt:
* platform/mac/fast/text/international/thai-line-breaks-expected.checksum:
* platform/mac/fast/text/international/thai-line-breaks-expected.png:
* platform/mac/fast/text/international/thai-line-breaks-expected.txt:
* platform/mac/fast/text/international/wrap-CJK-001-expected.checksum:
* platform/mac/fast/text/international/wrap-CJK-001-expected.png:
* platform/mac/fast/text/international/wrap-CJK-001-expected.txt:
* platform/mac/transforms/2d/hindi-rotated-expected.checksum:
* platform/mac/transforms/2d/hindi-rotated-expected.png:
* platform/mac/transforms/2d/hindi-rotated-expected.txt:



Canonical link: https://commits.webkit.org/64342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73993 268f45cc-cd09-0410-ab3c-d52691b4dbfc